# anteworld

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  meson.build
example/: MODULE.bazel  example_plugins.sln
example/bazel-example/: MODULE.bazel
example/example_gameob/: example_gameob.vcxproj  meson.build
example/gen_compile_commands/: BUILD
example/igc_plugin/: CMakeLists.txt  igc_plugin.vcxproj  igc_plugin.vcxproj.filters  meson.build
example/igc_plugin/ifc/: plugin_interface.h
example/igc_plugin/ifc/js/: plugin_interface.h
example/igc_plugin/ifc/lua/: plugin_interface.h
example/scripts/: install_vehicle_plugin.ps1
example/vehicle_plugin/: BUILD  CMakeLists.txt  meson.build  simplugin.cpp  simplugin.hpp  vehicle_plugin.vcxproj  vehicle_plugin.vcxproj.filters
example/vehicle_plugin/ifc/: engine.h  engine.js.h  engine.lua.h
example/vehicle_plugin/ifc/docs/: engine.html
example/vehicle_plugin/ifc/js/: engine.h
example/vehicle_plugin/ifc/lua/: engine.h
include/: MODULE.bazel
include/comm/: BUILD
include/glm/: BUILD  glm.cppm  meson.build
include/luajit/: luajit.h
include/ot/: BUILD  CMakeLists.txt  coal.h  geom_types.h  meson.build
include/ot/glm/: coal.h  glm_ext.h  glm_types.h
include/v8/: BUILD  meson.build
lib/: luajit.lib
